2006-10-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/obconversion.h, src/obconversion.cpp: Make sure to free
	streams created using ReadString, ReadFile, or WriteFile()
	methods. Fixes PR#1578916.

2006-10-17  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/chemdrawcdx.cpp: Fixed corruption of 2D coordinates
	caused by attempted conversion from CDX scale to Angstroms. Fixes
	PR#1576703.

	* configure.in, configure, Makefile.*: Bump to version 2.1.0b2 for
	next snapshot (now using autoconf-2.60).

	* data/*, src/fingerprints/finger3.cpp: Rename pattern file to
	SMARTS_InteLigand.txt.

	* src/obiter.h: Fix GCC warning reported by Carsten.

	* src/formats/*format.cpp: Update chemical MIME types,
	specification URLS and extensions from the chemical MIME project:
	http://sf.net/projects/chemical-mime 

	* scripts/openbabel.i: Add output string for
	OBTypeTable::Translate().

	* scripts/*: Regenerate.

	* test/textbuffer.cpp, test/vector3.cpp: New tests for newline
	translation and vector3 manipulations.

2006-09-30 Chris Morley <ob@gaseq.co.uk>

	* src/formats/fastsearchformat.cpp(ReadChemObject):
	Output message with the properties of the index if no
	SMILES structure provided.
	
	* src/fingerprint.h: Added FastSearch::GetIndexHeader()
	Reformat tabs.
	
2006-09-30 Chris Morley <ob@gaseq.co.uk>
	
	* src/formats/chemdrawcdx.cpp (Flags): added NOTWRITABLE
	
	* src/formats/fastsearchformat.cpp: Made timing of indexing
	work properly.
	
	* src/oberror.cpp(ThrowError) : return immediately if _logging is
	false; do not add to list of messages.
	
	* src/generic.cpp(GetLatticeType, GetSpaceGroupNumber) : ensured
	all paths returned value to avoid compiler warning (no real effect)

2006-09-27  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/generic.h: Updated OBSetData to initialize to correct
	OBGenericDataType enumeration.
	* src/formats/ghemicalformat.cpp: GPR format now exports GAMESS